--- a/package.json
+++ b/package.json
@@ -37,6 +37,13 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tiptap/extension-image": "^2.10.2",
+    "@tiptap/extension-table": "^2.10.2",
+    "@tiptap/extension-table-cell": "^2.10.2",
+    "@tiptap/extension-table-header": "^2.10.2",
+    "@tiptap/extension-table-row": "^2.10.2",
+    "@tiptap/extension-task-item": "^2.10.2",
+    "@tiptap/extension-task-list": "^2.10.2",
     "@tiptap/pm": "^2.10.2",
     "@tiptap/react": "^2.10.2",
     "@tiptap/starter-kit": "^2.10.2",
@@ -46,9 +53,11 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
+    "install": "^0.13.0",
     "lucide-react": "^0.465.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
+    "npm": "^10.9.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
@@ -58,6 +67,7 @@
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-extension-resize-image": "^1.2.1",
     "vaul": "^1.1.1",
     "zod": "^3.23.8"
   },
