--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "npm": "^10.9.2",
+    "nuqs": "^2.2.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-color": "^2.19.3",
     "react-day-picker": "^8.10.1",
