--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -71,14 +71,14 @@
     "input-otp": "^1.4.1",
     "install": "^0.13.0",
     "lucide-react": "^0.465.0",
-    "next": "15.0.3",
+    "next": "^15.1.3",
     "next-themes": "^0.4.3",
     "npm": "^10.9.2",
     "nuqs": "^2.2.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.7",
