--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tiptap/core": "^2.10.2",
     "@tiptap/extension-collaboration": "^2.10.2",
     "@tiptap/extension-collaboration-cursor": "^2.10.2",
     "@tiptap/extension-color": "^2.10.2",
